@@ -1,3 +1,5 @@
+HEAD
+	+ Set HOME environment variable in EBox::init()
 1.3.7
 	+ Add support for permanent messages
 1.3.6
